# Synthpod

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  API.md  CMakeLists.txt  README.md  VERSION  app.c  app.h  changelog.in  check_for_font  copyright.in  ext_urid.c  ext_urid.h  ext_worker.c  ext_worker.h  meson.build  meson_options.txt  osc_stream.c  osc_stream.h  osc_stream_pipe.c  osc_stream_private.h  osc_stream_slip.c  osc_stream_slip.h  osc_stream_tcp.c  osc_stream_udp.c  patcher.c  patcher.edc  patcher.h  props.h  stoat.whitelist  synthpod.c  synthpod.edc  test_varchunk.c  varchunk.c  varchunk.h  xpress.h
app/: CMakeLists.txt  meson.build  synthpod_app.c  synthpod_app_mod.c  synthpod_app_port.c  synthpod_app_private.h  synthpod_app_state.c  synthpod_app_ui.c  synthpod_app_worker.c
bundle/: CMakeLists.txt  manifest.ttl  manifest.ttl.in  meson.build  state.ttl  synthpod_audio_sink.c  synthpod_audio_source.c  synthpod_bundle.c  synthpod_bundle.h  synthpod_bundle.ttl  synthpod_cv_sink.c  synthpod_cv_source.c  synthpod_midi_sink.c  synthpod_midi_source.c  synthpod_osc_sink.c  synthpod_osc_source.c  synthpod_sink.c  synthpod_source.c
canvas.lv2/: .gitlab-ci.yml  README.md  canvas.h  forge.h  render.h  render_cairo.h  render_nanovg.h
clock_sync.lv2/: clock_sync.h
cmake/: arm-linux-gnueabihf.cmake  i686-linux-gnu.cmake  x86_64-linux-gnu.cmake
cross_clock/: README.md  cross_clock.h
d2tk/: base.h  config.h.in  core.h  frontend_glfw.h  frontend_pugl.h  hash.h  util.h
data/: CMakeLists.txt  entry.edc  group.edc  modgrid.edc  modlist.edc  omk_logo.edc  patcher.edc  slider.edc  smart_bitmask.edc  smart_meter.edc  smart_slider.edc  smart_spinner.edc  smart_toggle.edc  synthpod.edc  theme.edc
data/pix/: COPYING
data/png/: COPYING
data/rounded_ui/: COPYING
data/squared_ui/: COPYING
example/: custom_cairo.c  d2tk_fbdev.c  d2tk_pugl.c  example.c
ext/: CMakeLists.txt  eoui.h  manifest.ttl
include/: synthpod_app.h  synthpod_common.h  synthpod_patcher.h  synthpod_private.h  synthpod_ui.h
lfrtm/: .gitlab-ci.yml  README.md  lfrtm.h
lib/: CMakeLists.txt  ext_urid.c  meter.c  meter.h  patcher.c  patcher.h  smart_bitmask.c  smart_bitmask.h  smart_meter.c  smart_meter.h  smart_slider.c  smart_slider.h  smart_spinner.c  smart_spinner.h  smart_toggle.c  smart_toggle.h  synthpod.h  synthpod_app.c  synthpod_app.h  synthpod_common.h  synthpod_private.h  synthpod_sandbox_io.h  synthpod_sandbox_master.c  synthpod_sandbox_master.h  synthpod_sandbox_slave.c  synthpod_sandbox_slave.h  synthpod_ui.c  synthpod_ui.h
libosc_stream/: osc_stream.h
linenoise/: example.c  linenoise.c  linenoise.h
mapper.lv2/: .gitlab-ci.yml  README.md  mapper.h  meson.build
meson/: i686-linux-gnu
netatom.lv2/: .gitlab-ci.yml  README.md  meson.build  netatom.h
netatom.lv2/netatom.lv2/: netatom.h
netatom.lv2/test/: Makefile  netatom_test.c
nk_pugl/: nk_pugl.h
nsmc/: nsmc.h
osc.lv2/: reader.h  stream.h  util.h
plugins/: CMakeLists.txt  inlist.h  manifest.ttl.in  meson.build  osc_in.c  osc_io.c  osc_io.h  osc_io.ttl  osc_io_io.c  osc_out.c  rtmidi.c  rtmidi.h  rtmidi.ttl  rtmidi_in.cpp  rtmidi_out.cpp  synthpod.ttl  synthpod_anonymizer.c  synthpod_atom2control.c  synthpod_atom2cv.c  synthpod_atom2event.c  synthpod_audioxfademono.c  synthpod_audioxfadestereo.c  synthpod_common_d2tk.c  synthpod_common_eo.c  synthpod_common_nk.c  synthpod_common_ui.c  synthpod_control2atom.c  synthpod_control2cv.c  synthpod_cv2atom.c  synthpod_cv2control.c  synthpod_event2atom.c  synthpod_heavyload.c  synthpod_keyboard.c  synthpod_keyboard_eo.c  synthpod_keyboard_nk.c  synthpod_keyboard_ui.c  synthpod_lv2.c  synthpod_lv2.h  synthpod_lv2_d2tk.c  synthpod_lv2_eo.c  (+12 more)
props.lv2/: .gitlab-ci.yml  meson.build  props.h
props.lv2/test/: props.c  props.ttl
sandbox_ui.lv2/: CMakeLists.txt  meson.build  sandbox_efl.c  sandbox_io.h  sandbox_master.c  sandbox_master.h  sandbox_slave.c  sandbox_slave.h  sandbox_ui.c
src/: backend_cairo.c  backend_nanovg.c  base.c  base_bar.c  base_button.c  base_combo.c  base_cursor.c  base_custom.c  base_internal.h  base_label.c  base_layout.c  base_lineedit.c  base_link.c  base_meter.c  base_pty.c  base_scrollbar.c  base_spinner.c  base_table.c  base_textfield.c  base_vkb.c  core.c  core_internal.h  frontend_fbdev.c  frontend_glfw.c  frontend_pugl.c  mum.c  util_spawn.c
subprojects/d2tk/: README.md  VERSION  meson.build  meson_options.txt
subprojects/d2tk/d2tk/: base.h  config.h.in  core.h  frontend.h  frontend_fbdev.h  hash.h  util.h
subprojects/d2tk/example/: custom_nanovg.c  d2tk_fbdev.c  d2tk_glfw.c  d2tk_pugl.c  example.c  example.h
subprojects/d2tk/linenoise/: example.c  linenoise.c  linenoise.h
subprojects/d2tk/nanovg/src/: nanovg.h
subprojects/d2tk/pugl/pugl/detail/: x11.c  x11.h
subprojects/d2tk/src/: backend_cairo.c  backend_nanovg.c  base.c  base_bar.c  base_bitmap.c  base_custom.c  base_dial.c  base_flowmatrix.c  base_frame.c  base_image.c  base_internal.h  base_lineedit.c  base_pane.c  base_pty.c  base_separator.c  base_spinner.c  base_tooltip.c  base_wave.c  core.c  core_internal.h  frontend_fbdev.c  frontend_pugl.c  hash.c  mum.c  util_spawn.c
subprojects/d2tk/test/: base.c  core.c  mock.c
system_port.lv2/: system_port.h
test/: Makefile  base.c  core.c  cross_clock_test.c  lfrtm_test.c  manifest.ttl.in  mapper_test.c  mock.c  netatom_test.c  osc_test.c  props.ttl  props_test.c  xpress.c  (+1 more)
ui/: CMakeLists.txt  patcher.c  smart_bitmask.c  smart_meter.h  smart_spinner.c  synthpod_ui.c  synthpod_ui_app.c  synthpod_ui_efl.c  synthpod_ui_group.c  synthpod_ui_kx.c  synthpod_ui_matrix.c  synthpod_ui_menu.c  synthpod_ui_midi.c  synthpod_ui_mod.c  synthpod_ui_modgrid.c  synthpod_ui_modlist.c  synthpod_ui_patcher.c  synthpod_ui_pluglist.c  synthpod_ui_port.c  synthpod_ui_preset.c  synthpod_ui_private.h  synthpod_ui_prop.c  synthpod_ui_sbox.c  synthpod_ui_show.c  synthpod_ui_std.c
xpress.lv2/: .gitlab-ci.yml  CMakeLists.txt  README.md  meson.build  xpress.h
xpress.lv2/test/: manifest.ttl.in  xpress.c  xpress_test.c
xpress.lv2/xpress.lv2/: xpress.h
(+25 files in other folders)
